<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.dataimport</groupId>
  <artifactId>import_json_to_neo4j_v2.0</artifactId>
  <version>1.0.0</version>
  <packaging>jar</packaging>
  <name>import_json_to_neo4j_v2.0</name>
  <url>http://maven.apache.org</url>

    <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <java.version>1.8</java.version>
    </properties>

    <dependencies>

      <dependency>
        <groupId>org.json</groupId>
        <artifactId>json</artifactId>
        <version>20151123</version>
      </dependency>

      <dependency>
        <groupId>org.neo4j</groupId>
        <artifactId>neo4j</artifactId>
        <!--<version>3.4.1</version>-->
        <version>3.0.4</version>
      </dependency>
      <!--mvn install:install-file -Dfile=IKAnalyzer-5.5.0.jar -DgroupId=org.wltea  -DartifactId=IKAnalyzer -Dversion=5.5.0 -Dpackaging=jar-->

      <dependency>
        <groupId>org.wltea.analyzer</groupId>
        <artifactId>IKAnalyzer</artifactId>
        <version>5.5.0</version>

      </dependency>
      <dependency>
        <groupId>org.neo4j</groupId>
        <artifactId>neo4j-kernel</artifactId>
        <!--<version>3.4.1</version>-->
        <version>3.0.4</version>
      </dependency>

      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-compress</artifactId>
        <version>1.10</version>
      </dependency>

      <!--<dependency>-->
        <!--<groupId>org.json</groupId>-->
        <!--<artifactId>json</artifactId>-->
        <!--<version>20151123</version>-->
      <!--</dependency>-->

      <!--<dependency>-->
        <!--<groupId>org.wltea.analyzer</groupId>-->
        <!--<artifactId>IKAnalyzer</artifactId>-->
        <!--<version>5.5.0</version>-->
        <!--&lt;!&ndash;<scope>system</scope>&ndash;&gt;-->
        <!--&lt;!&ndash;本地jar的路径,相对或绝对都可以&ndash;&gt;-->
        <!--<systemPath>D:\maven\apache-maven-3.5.2\lib\IKAnalyzer-5.5.0.jar</systemPath>&ndash;&gt;-->
      <!--</dependency>-->

      <dependency>
        <groupId>org.neo4j.driver</groupId>
        <artifactId>neo4j-java-driver</artifactId>
        <version>1.1.2</version>
      </dependency>
      <!--<dependency>-->
        <!--<groupId>net.sf.json-lib</groupId>-->
        <!--<artifactId>json-lib</artifactId>-->
        <!--<version>2.1</version>-->
        <!--&lt;!&ndash;<classifier>jdk15</classifier>&ndash;&gt;-->
      <!--</dependency>-->

      <dependency>
        <groupId>org.python</groupId>
        <artifactId>jython</artifactId>
        <version>2.7.0</version>
      </dependency>

      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.12</version>
        <scope>test</scope>
      </dependency>


    </dependencies>

    <build>
      <finalName>buildNeo4jDatabase</finalName>
      <plugins>
        <!--<plugin>-->
          <!--<groupId>org.apache.maven.plugins</groupId>-->
          <!--<artifactId>maven-surefire-plugin</artifactId>-->
          <!--<version>2.17</version>-->
          <!--<configuration>-->
            <!--<forkCount>3</forkCount>-->
            <!--<reuseForks>true</reuseForks>-->
            <!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
            <!--<systemPropertyVariables>-->
            <!--</systemPropertyVariables>-->
          <!--</configuration>-->
        <!--</plugin>-->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.1</version>
          <configuration>
            <source>${java.version}</source>
            <target>${java.version}</target>
            <encoding>UTF-8</encoding>
            <showWarnings>true</showWarnings>
            <verbose>true</verbose>

          </configuration>

        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>2.4.3</version>
          <!--<configuration>-->
            <!--<source>${java.version}</source>-->
            <!--<target>${java.version}</target>-->
          <!--</configuration>-->
          <configuration>
            <filters>
              <filter>
                <artifact>*:*</artifact>
                <excludes>
                  <exclude>META-INF/*.SF</exclude>
                  <exclude>META-INF/*.DSA</exclude>
                  <exclude>META-INF/*.RSA</exclude>
                </excludes>
              </filter>
            </filters>
          </configuration>
          <executions>
            <execution>
              <phase>package</phase>
              <goals>
                <goal>shade</goal>
              </goals>
              <configuration>
                <transformers>
                  <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                    <mainClass>com.dataimport.Runner</mainClass>
                  </transformer>
                </transformers>
              </configuration>
            </execution>
          </executions>
        </plugin>

      </plugins>
    </build>

</project>
